# mneme

./: .gitignore  AGENTS.md  CODEX_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml
config/: memory.yaml  models.yaml
docs/: DESIGN_DOCUMENT.md  IMPLEMENTATION_PLAN.md  NODE_ARCHITECTURE.md  PROJECT_STRUCTURE.md  architecture_overview.mmd
docs/adr/: 0001-memory-first-v1.md
docs/architecture/: COGNITIVE_CAPABILITY_ROADMAP.md  MASTER_ROADMAP.md  REPO_STATUS.md  ROADMAP.md  ROS_INTEGRATION_PLAN.md  RUNTIME.md  SERIALIZATION.md  WORLD_MODEL.md
docs/attention/: ATTENTION_MANAGER.md
docs/executive/: DIALOGUE_PLANNER.md  EXECUTIVE_V0.md
docs/memory/: CONFLICTS.md  (+12 more)
memory/: MEMORY_INDEX.md
scripts/: consolidate_once.py  dev_check.py  init_db.py  mneme_memory.py  replay_scenario.py  smoke_test_memory.py
tasks/: backlog.md
tests/: test_attention.py  test_attention_v1.py  test_capability_ladder.py  test_cognitive_benchmarks.py  test_cognitive_context.py  test_consolidation.py  test_consolidation_daemon.py  test_context_windows.py  test_conversational_presence.py  test_decay.py  test_dialogue.py  test_executive.py  test_executive_v1.py  test_fact_extraction.py  test_interface_alignment.py  test_live_perception.py  test_memory_engine_cli.py  test_memory_review.py  test_model_dialogue.py  test_model_runtime.py  test_models.py  test_observability.py  test_promotion.py  test_real_peripherals.py  test_retrieval_warnings_summaries.py  test_runtime_events.py  test_salience.py  test_scenario_replay.py  test_self_model.py  test_speech_loop_hardening.py  test_stage3_runtime.py  test_stage6_local_living_lab.py  test_storage_migrations.py  test_storage_provenance_reads.py  test_storage_retrieval.py  test_turn_understanding.py  test_working_memory.py  test_world_model.py
(+462 files in other folders)
