[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "android-brain-memory"
version = "0.1.0"
description = "Starter memory subsystem for an android robot brain"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.0"
]

[project.scripts]
mneme = "android_brain_memory.virtual_head:main"
mneme-memory = "android_brain_memory.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
