[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "android-brain-memory"
version = "0.1.0"
description = "Starter memory subsystem for an android robot brain"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.0"
]

[project.scripts]
mneme = "android_brain_memory.virtual_head:main"
mneme-memory = "android_brain_memory.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
audio-local = [
  "numpy>=1.26.0",
  "sounddevice>=0.4.7"
]
vad-local = [
  "webrtcvad-wheels>=2.0.14"
]
asr-local = [
  "faster-whisper>=1.1.0"
]
tts-local = [
  "kokoro>=0.9.0",
  "numpy>=1.26.0",
  "sounddevice>=0.4.7"
]
vision-local = [
  "opencv-python>=4.9.0",
  "mediapipe>=0.10.14"
]
local-speech = [
  "faster-whisper>=1.1.0",
  "kokoro>=0.9.0",
  "numpy>=1.26.0",
  "sounddevice>=0.4.7",
  "webrtcvad-wheels>=2.0.14"
]
local-vision = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.9.0"
]
local-lab = [
  "faster-whisper>=1.1.0",
  "kokoro>=0.9.0",
  "mediapipe>=0.10.14",
  "numpy>=1.26.0",
  "opencv-python>=4.9.0",
  "sounddevice>=0.4.7",
  "webrtcvad-wheels>=2.0.14"
]

[tool.setuptools.packages.find]
where = ["src"]
